--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
-aiohttp
 aiofiles
-electrogram
-httpx
-pymongo
-requests
-pytz
-gunicorn
-uv
-gevent
-Flask
+aiohttp
 apscheduler
 asyncio
 bs4
+electrogram
 feedparser
+Flask
+gevent
+gunicorn
+httpx
 motor
-uvloop==0.21.0b1
+pillow
+pymongo
 pyshorteners
+pytz
+requests
+uv
+uvloop==0.21.0b1
